--- a/yaml/account.yaml
+++ b/yaml/account.yaml
@@ -2,36 +2,36 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: account-kkh
+  name: team7-account-kkh
   namespace: group1-team7
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: account-kkh
+      app: team7-account-kkh
   template:
     metadata:
       labels:
-        app: account-kkh
+        app: team7-account-kkh
     spec:
       containers:
-      - name: account-kkh
+      - name: team7-account-kkh
         image: k8s-vga-worker1:5000/team7-account-kkh:latest
         imagePullPolicy: Always #IfNotPresent
         ports:
-        - containerPort: 8083
+        - containerPort: 9202
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: account-kkh
+  name: team7-account-kkh
   namespace: group1-team7
 spec:
   selector:
-    app: account-kkh
+    app: team7-account-kkh
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8083
+      targetPort: 9202
       nodePort: 30740
   type: NodePort
